Fixed whitespaces Fixed homepage in opera

--- a/_assets/home.less
+++ b/_assets/home.less
@@ -93,7 +93,7 @@ h2.home-title {
 }
 
 .img-technology {
-  max-height: 50px;
+  max-height: 40px;
   max-width: 100%;
 }
 
